--- a/index.html
+++ b/index.html
@@ -168,6 +168,15 @@
  </ul>
  </section>
 </main>
+        <section class="Assignment">
+         <div class="container">
+             <h2>Assignment</h2>
+             <p>This is checkpoint#28</p>
+             <a href="signup.html">Sign Up</a>
+            </div>
+                 </section>
+        
+        
         <!-- Footer -->
  <footer>
    <div class="container footer-nav-block">
