--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <header>
    <nav class="container">
      <div class="one-half">
-       <a href="index.html" class="logo"><img src="images/logo.png" alt="Dstore" /></a>
+       <a href="html/index.html" class="logo"><img src="images/logo.png" alt="Dstore" /></a>
      </div>
      <div class="one-half">
        <ul>
